
        * Changed VrmlMFNode::addNode() and ::removeNode() to take
          VrmlNode references (rather than pointers).

        * Changed VrmlNodeType::addNode() to take a VrmlNode reference
          (rather than a pointer).

        * In `VrmlNamespace.cpp', moved definitions of NodeCloneVisitor
          and NodeRouteCopyVisitor from inside the cloneNodes() method
          to unnamed namespace at global scope. This fixes a weird
          problem with linking under egcs 1.1.2.

2001-02-05  Braden McDaniel  <braden@endoframe.com>

        * Removed dynamic_cast in assertions in VrmlNodeAppearance's,
          VrmlNodeElevationGrid's, and VrmlNodeShape's setters in favor
          of toNode() methods.

        * Fixed problem with accumulateTransform() in VrmlNodeBillboard
          and VrmlNodeTransform where a null pointer could potentially
          be dereferenced.

        * Added VrmlNode::toBillboard() and ::toCollision() methods.

        * Removed size(), child() and getChildren() methods from
          VrmlNodeGroup; these are obsoleted by the getChildren()
          method.

2001-01-29 Michael Louka  <michael.louka@hrp.no>

        * For Mac OS only: Updated System.cpp to removed dependency on
          DriverServices system library. Updated Lookat.mcp and
          Lookat.mcp.xml to support this update.

2001-01-28  Braden McDaniel  <braden@endoframe.com>

        * Changed VrmlNodeType and VrmlNodeProto to hold their
          implementation nodes as a VrmlMFNode object, rather than a
          pointer to a VrmlMFNode. (Since a PROTO *must* have at least
          one node in its implementation, we can tell whether the
          implementation has been retrieved by the length of the
          VrmlMFNode object.)

        * Added a visitor class for the node hierarchy, VrmlNodeVisitor.

        * Reimplemented node cloning using a visitor. This cleans up
          the VrmlNode API a bit.

2001-01-27  Braden McDaniel  <braden@endoframe.com>
